config/tester.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flagger-loadtester
  name: flagger-loadtester
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: flagger-loadtester
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flagger-loadtester
  name: flagger-loadtester
spec:
  selector:
    matchLabels:
      app: flagger-loadtester
  template:
    metadata:
      annotations:
        openservicemesh.io/inbound-port-exclusion-list: 80, 8080
        prometheus.io/port: "8080"
        prometheus.io/scrape: "true"
      labels:
        app: flagger-loadtester
    spec:
      containers:
      - command:
        - ./loadtester
        - -port=8080
        - -log-level=info
        - -timeout=1h
        image: ghcr.io/fluxcd/flagger-loadtester:0.30.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - wget
            - --quiet
            - --tries=1
            - --timeout=4
            - --spider
            - http://localhost:8080/healthz
          timeoutSeconds: 5
        name: loadtester
        ports:
        - containerPort: 8080
          name: http
        readinessProbe:
          exec:
            command:
            - wget
            - --quiet
            - --tries=1
            - --timeout=4
            - --spider
            - http://localhost:8080/healthz
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 1000m
            memory: 512Mi
          requests:
            cpu: 10m
            memory: 32Mi
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 10001
